resources/ej2-base/releasenotes/WindowsForms/Release-Notes/v14.3.0.52/Presentation.md
## Presentation

### Bug Fixes
{:#presentation-bug-fixes}
* \#164372 - The "Null Reference Exception" will be no longer thrown while resaving the PowerPoint presentation with a cloned SmartArt diagram.
* \#164260 - The "Argument Exception" will be no longer raised while converting PowerPoint presentation to an image.
* \#162341 - Text formatting will be now preserved properly while merging two PowerPoint presentations.
* \#164372 - The merged PowerPoint presentation will be no longer corrupted while cloning the slides using "KeepSourceFormatting" option
* \#162450 - Chart series colors are now preserved properly while converting the PowerPoint slide to an image.
* \#161690 - Paragraph text with the gradient fill will be preserved properly while converting the PowerPoint presentation to PDF or image. 

